--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </li>
           </ul>
         </div>
-        <a href="#" class="contactBtn">Contact Us <i class="fa-solid fa-chevron-down"></i></a>
+        <a href="#" class="contactBtn">Contact Us </a>
       </div>
     </nav>
     <!-- Header part End -->
